# ic-evm-sign

./: dfx.json
e2e/backend/: Cargo.toml
e2e/backend/src/: lib.rs
lib/: Cargo.toml
lib/src/: ecdsa.rs  lib.rs  mocks.rs  state.rs  tests.rs  transaction.rs  utils.rs
