[package]
name = "ic-evm-sign"
version = "0.1.6"
edition = "2021"
description = "This library enables Internet Computer canisters to sign transactions for EVM-compatible blockchains"
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/ic-evm-sign"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.16.0"
serde = "1"
primitive-types = { version = "0.12.1", default-features = false, features = [
    "byteorder",
    "rustc-hex",
] }
ethereum-rlp = "0.2.3"
easy-hasher = "2.2.1"
libsecp256k1 = { version = "0.7.1", package = "libsecp256k1", default-features = false, features = [
    "lazy-static-context",
] }
hex = "0.4.3"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
libsecp256k1 = { version = "0.7.1", package = "libsecp256k1" }
futures = "0.3.25"
